1.22.x-sezero (libmpg123 updates)
---
- Added nasm versions of x86 asm sources.
- Open Watcom and MSVC6 compatibility.
- New --enable-allquiet option to completely silence the library.
- Minor warning fixes.
- Minor updates to CFLAGS. Updates to configury.

1.22.x-sezero (backports)
---
- Fix out-of-bounds reads in ID3 parser for unsynced frames.
  (oss-fuzz-bug 15852)
- Fix out-of-bounds read for RVA2 frames with non-delimited identifier.
  (oss-fuzz-bug 15852)
- Fix implementation-defined parsing of RVA2 values (oss-fuzz-bug 15862)
- Correct preprocessor syntax in mangle.h, no #error in a #define line.
  (bug 273, thanks to nmlgc).
- Fix compute_bpf() for free format streams (needed to estimate track
  length and working fuzzy seeking in absence of an Info tag).
- Accept changing mode extension bits when looking for next header for
  detecting free-format streams (bug 257).
- Proper fix for the xrpnt overflow problems by correctly
  initialising certain tables for MPEG 2.x layer III. The checks that
  catch the resulting overflow are still in place, but likely superfluous
  now. Note that this means certain valid files would have been misdecoded
  before, if anyone actually produced them. Thanks to Robert Hegemann for
  the fix!
- Silently handle granules with part2_3_length == 0, but
  scalefac_compress != 0 (ignore the latter).
- Hotfix for bug 255: Overflow reading frame data bits in layer II decoding.
  Now, all-zero data is returned if the frame data is exhausted. This might
  have a slight impact on performance, but not easily measurable so far.
- Avoid another buffer read overflow in the ID3 parser on 32 bit platforms
  (bug 254).
- Better configure checks for i?86-apple-darwin (bug 253).
- Prevent harmless call to memcpy(NULL, NULL, 0).
- More early checking of ID3v2 encoding values to avoid bogus text being
  stored.
- Better checks for xrpnt overflow in III_dequantize_sample() before each