@@ -8,6 +8,9 @@
 
 1.22.x-sezero (backports)
 ---
+- Fix an out-of-bounds read of maximal two bytes for truncated RVA2 frames.
+  (oss-fuzz-bug 15975). The earlier fix around the same location needed
+  one thought more.
 - Fix out-of-bounds reads in ID3 parser for unsynced frames.
   (oss-fuzz-bug 15852)
 - Fix out-of-bounds read for RVA2 frames with non-delimited identifier.
